[package]
name = "dotnet-vm-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.3", features = ["derive"] }
dotnet-vm = { path = "..", features = ["fuzzing"] }
dotnet-value = { path = "../../dotnet-value", features = ["fuzzing"] }
dotnet-utils = { path = "../../dotnet-utils", features = ["fuzzing"] }
dotnet-types = { path = "../../dotnet-types", features = ["fuzzing"] }
dotnet-assemblies = { path = "../../dotnet-assemblies" }
dotnetdll = { git = "https://github.com/nickbclifford/dotnetdll" }
gc-arena = "0.5"

# Prevent this from interfering with workspaces
[workspace]
members = [".", "tools"]

[[bin]]
name = "fuzz_executor"
path = "fuzz_targets/fuzz_executor.rs"
test = false
doc = false
